# advent-of-code

./: .gitignore  CMakeLists.txt  LICENSE  README.md
2023/: test.cpp
2023/day01a/: solution.cpp
2023/day01b/: solution.cpp
2023/day02a/: solution.cpp
2023/day02b/: solution.cpp
2023/day03a/: solution.cpp
2023/day03b/: solution.cpp
2023/day04a/: solution.cpp
2023/day04b/: solution.cpp
2023/day05a/: solution.cpp
2023/day05b/: solution.cpp
2023/day06a/: solution.cpp
2023/day06b/: solution.cpp
2023/day07a/: solution.cpp
2023/day07b/: solution.cpp
2023/day08a/: solution.cpp
2023/day08b/: solution.cpp
2023/day09a/: solution.cpp
2023/day09b/: solution.cpp
2023/day10a/: solution.cpp
2023/day10b/: solution.cpp
2023/day11a/: solution.cpp
2023/day11b/: solution.cpp
2023/day12a/: solution.cpp
2023/day12b/: solution.cpp
2023/day13a/: solution.cpp
2023/day13b/: solution.cpp
2023/day14a/: solution.cpp
2023/day14b/: solution.cpp
2023/day15a/: solution.cpp
2023/day15b/: solution.cpp
2023/day16a/: solution.cpp
2023/day16b/: solution.cpp  solution2.cpp
2023/day17a/: solution.cpp
2023/day17b/: solution.cpp
2023/day18a/: solution.cpp
2023/day18b/: solution.cpp
2023/day19a/: solution.cpp
2023/day19b/: solution.cpp
2023/day20a/: solution.cpp
2023/day20b/: solution.cpp
2023/day21a/: solution.cpp
2023/day21b/: solution.cpp
2023/day22a/: solution.cpp
2023/day22b/: input.txt  solution.cpp
2023/day23a/: solution.cpp
2023/day23b/: solution.cpp
2023/day24a/: solution.cpp
lib/: CMakeLists.txt
(+89 files in other folders)
